--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -76,7 +76,7 @@
             <tbody>
                 <tr> <!-- (T)able (R)ow -->
                     <td>2019-2021</td>
-                    <td>Unix/Linux Intern at Firefighters</td>
+                    <td>Unix/Linux Intern at the Fire dept.</td>
                 </tr>
                 <tr>
                     <td>2021-2022</td>
@@ -89,33 +89,82 @@
             </tbody>
         </table>
         <hr>
-        <h3>Hard Skills</h3>
-        <ul>
-            <!-- (U)nordered (L)ist -->
-            <li>
-                <!-- (Li)st Element -->
-                <strong>Python</strong>
-            </li>
-            <li>Unix/Linux</li>
-            <li>Git</li>
-            <h4>Desired Hard Skills</h4>
 
-            <ul>
-                <li>Html5</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-                <li>Angular</li>
-                <li>Node.js</li>
-                <li>Typescript</li>
-                <li>SQL</li>
-            </ul>
-        </ul>
-        <h3>Soft Skills</h3>
-        <ul>
-            <li><strong>Communication</strong></li>
-            <li>Perseverance</li>
-            <li>Logical thinking</li>
-        </ul>
+        <table>
+            <h3>Skills</h3>
+
+            <tbody>
+                <tr>
+                    <td>Python</td>
+                    <td>
+                        &#11088;&#11088;&#11088;&#11088;
+                    </td>
+                </tr>
+                <tr>
+                    <td>Unix/Linux</td>
+                    <td>&#11088;&#11088;&#11088;</td>
+                </tr>
+                <tr>
+                    <td>Git</td>
+                    <td>&#11088;&#11088;</td>
+                </tr>
+
+
+            </tbody>
+        </table>
+        <table>
+            <h3>Desired Skills</h3>
+            <tbody>
+                <tr>
+                    <td>HTML5</td>
+                </tr>
+                <tr>
+                    <td>CSS</td>
+                </tr>
+                <tr>
+                    <td>Javascript</td>
+                </tr>
+                <tr>
+                    <td>Angular</td>
+                </tr>
+                <tr>
+                    <td>Node.js</td>
+                </tr>
+                <tr>
+                    <td>Typescript</td>
+                </tr>
+                <tr>
+                    <td>SQL</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table>
+            <h3>Soft Skills</h3>
+            <tbody>
+                <tr>
+                    <td>
+                        <strong>Communication</strong>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Perseverance
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Advanced logical thinking
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Teaching
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
 
         <hr />
         <h3>
