--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -139,31 +139,41 @@
             </tbody>
         </table>
 
+        <hr>
+        <h3>Soft Skills</h3>
         <table>
-            <h3>Soft Skills</h3>
-            <tbody>
-                <tr>
-                    <td>
-                        <strong>Communication</strong>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Perseverance
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Advanced logical thinking
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Teaching
-                    </td>
-                </tr>
-            </tbody>
+            <tr>
+                <td>
+                    <table cellspacing="10">
+                        <tr>
+                            <td><strong>Communication</strong></td>
+                            <td>&#11088;&#11088;&#11088;&#11088;</td>
+                        </tr>
+                        <tr>
+                            <td>Perseverance</td>
+                            <td>&#11088;&#11088;&#11088;</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table cellspacing="10">
+                        <tr>
+                            <tr>
+                                <td>Advanced logical thinking</td>
+                                <td>&#11088;&#11088;&#11088;</td>
+                            </tr>
+                            <tr>
+                                <td>Teaching</td>
+                                <td>&#11088;&#11088;&#11088;</td>
+                            </tr>
+                        </tr>
+                    </table>
+
+                </td>
+            </tr>
         </table>
+
+
 
 
         <hr />
