--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -9,6 +9,16 @@
     </head>
     <body>
         <p><strong>None, please dont call me.</strong></p>
-        <script src='' async defer></script>
+        <form action="mailto:jaymerebula04@gmail.com" method="post"
+            enctype="text/plain">
+            <label for="">Your Name:</label>
+            <input type="text" name="yourName"><br>
+            <label for="">Your Email:</label>
+            <input type="email" name="yourEmail" id=""><br><br>
+            <label for="">Your Message:</label><br>
+            <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
+            <input type="submit" name="" id="">
+        </form>
+        <p><a href="index.html">Go Back</a></p>
     </body>
 </html>
