--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -8,8 +8,17 @@
         <link rel='stylesheet' href='/CSS - My Site/css/styles.css'>
         <link rel="icon" href="favicon.ico?v=2">
     </head>
-    
+
     <body>
-        <script src='' async defer></script>
+
+        <div class="color-red">
+            <h1 class="me_color me_padding">I'm Jayme.</h1>
+            <p class="me_color me_padding">(becoming) a full-stack developer.</p>
+        </div>
+        
+        <div class="color-yellow"> </div>
+        <div class="color-green"> </div>
+
     </body>
+
 </html>
