--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -11,13 +11,15 @@
 
     <body>
 
-        <div class="color-red">
-            <h1 class="me_color me_padding">I'm Jayme.</h1>
-            <p class="me_color me_padding">(becoming) a full-stack developer.</p>
+        <div>
+            <img class="cloud" src="/CSS - My Site/images/cloud.png"
+                alt="cloud-img">
+            <h1>I'm Jayme.</h1>
+            <p>(becoming) a full-stack <span class="pro">pro</span>grammer.</p>
+            <img class="cloud" src="/CSS - My Site/images/cloud.png" alt="">
+            <img src="/CSS - My Site/images/mountain.png" alt="">
         </div>
-        
-        <div class="color-yellow"> </div>
-        <div class="color-green"> </div>
+
 
     </body>
 
