--- a/CSS_My_Site/index.html
+++ b/CSS_My_Site/index.html
@@ -20,8 +20,10 @@
             <img class="top-cloud" src="/CSS_My_Site/images/cloud.png"
                 alt="cloud-img">
             <h1>I'm Jayme.</h1>
-            <p class="my-description">(becoming) a full-stack <span class="pro">pro</span>grammer,
+            <h2>a <span class="pro">pro</span>grammer</h2>
+            <p class="my-description">
                 <br>
+                And
                 this is my progression trough this <strong>long</strong>
                 development path.
             </p>
@@ -30,50 +32,61 @@
             <img class="" src="/CSS_My_Site/images/mountain.png"
                 alt="">
         </div>
+
         <div class="middle-container">
             <div class="profile">
-                <img class="coffee-cup" src="/CSS_My_Site/images/coffee-cup.png"
-                    alt="coffee-cup">
                 <h2>Hello.</h2>
-                <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia,
-                    dolor urna. Non auctor, montes nulla distinctio.</p>
+                <p class="hello-description">Lorem ipsum dolor sit amet, vitae
+                    volutpat, dui conubia,
+                    dolor urna.<br> Non auctor, montes nulla distinctio.</p>
             </div>
+
             <hr>
+
             <div class="skills">
                 <h2>My Skills.</h2>
                 <div class="skill-row">
-                    <img class="coffee-cup" src="/CSS_My_Site/images/data-science.png" alt="">
+                    <img class="code-img"
+                        src="/CSS_My_Site/images/data-science.png" alt="">
                     <h3>Lorem & Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id
                         felis. Consectetuer vestibulum, nunc urna lectus, erat
                         ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
                 </div>
+
+                <br>
+
                 <div class="skill-row">
-                    <img class="" src="" alt="">
+                    <img class="coffee-img"
+                        src="/CSS_My_Site/images/coffee-cup.png"
+                        alt="">
                     <h3>Lorem Ipsum Dolor</h3>
-                    <p>Lorem ipsum dolor sit amet, mauris sed consectetuer.
+                    <p>Lorem ipsum dolor sit
+                        amet, mauris sed consectetuer.
                         Etiam et eu, bibendum interdum, lacus quis mauris.
                         Curabitur wisi, quisque vel eu, rutrum nam.</p>
                 </div>
             </div>
+            <br>
             <hr>
+
             <div class="contact-me">
                 <h2>Get In Touch</h2>
-                <h3>Lorem ipsum dolor sit amet, non elit.</h3>
                 <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus
                     sodales, tellus donec dui, ornare erat.</p>
                 <a class="btn" href="mailto:jaymerebula04@gmail.com">CONTACT ME</a>
             </div>
+
         </div>
 
 
         <div class="bottom-container">
+            <br>
             <a class="footer-link" href="https://www.linkedin.com/jayme-klein">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/qeapdead">Twitter</a>
             <a class="footer-link" href="https://www.github.com/jaymeklein">Github</a>
-            <p>© Name Surname.</p>
+            <p>© Jayme Klein.</p>
         </div>
-
 
 
     </body>
