--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Jayme Klein</title>
         <meta name='description' content=''>
-        <link rel='stylesheet' href='/CSS_My_Site/css/styles.css'>
+        <link rel='stylesheet' href='/css/styles.css'>
         <link rel="icon" href="favicon.ico?v=2">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
-            href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Noto+Sans+Mono&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Noto+Sans+Mono&family=Roboto+Mono&family=Silkscreen&display=swap"
             rel="stylesheet">
     </head>
 
     <body>
 
         <div class="background">
-            <img class="top-cloud" src="/CSS_My_Site/images/cloud.png"
+            <img class="top-cloud" src="/images/cloud.png"
                 alt="cloud-img">
             <h1>I'm Jayme.</h1>
             <h2>a <span class="pro">pro</span>grammer</h2>
@@ -27,9 +27,9 @@
                 this is my progression trough this <strong>long</strong>
                 development path.
             </p>
-            <img class="bottom-cloud" src="/CSS_My_Site/images/cloud.png"
+            <img class="bottom-cloud" src="/images/cloud.png"
                 alt="">
-            <img class="" src="/CSS_My_Site/images/mountain.png"
+            <img class="" src="/images/mountain.png"
                 alt="">
         </div>
 
@@ -38,7 +38,7 @@
                 <h2>Hello.</h2>
                 <p class="hello-description">Lorem ipsum dolor sit amet, vitae
                     volutpat, dui conubia,
-                    dolor urna.<br> Non auctor, montes nulla distinctio.</p>
+                    dolor urna. Non auctor, montes nulla distinctio.</p>
             </div>
 
             <hr>
@@ -47,7 +47,7 @@
                 <h2>My Skills.</h2>
                 <div class="skill-row">
                     <img class="code-img"
-                        src="/CSS_My_Site/images/data-science.png" alt="">
+                        src="/images/data-science.png" alt="">
                     <h3>Lorem & Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id
                         felis. Consectetuer vestibulum, nunc urna lectus, erat
@@ -58,7 +58,7 @@
 
                 <div class="skill-row">
                     <img class="coffee-img"
-                        src="/CSS_My_Site/images/coffee-cup.png"
+                        src="/images/coffee-cup.png"
                         alt="">
                     <h3>Lorem Ipsum Dolor</h3>
                     <p>Lorem ipsum dolor sit
@@ -72,9 +72,14 @@
 
             <div class="contact-me">
                 <h2>Get In Touch</h2>
-                <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus
-                    sodales, tellus donec dui, ornare erat.</p>
-                <a class="btn" href="mailto:jaymerebula04@gmail.com">CONTACT ME</a>
+                <p class="touch">Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <a class="btn"
+                    href="mailto:jaymerebula04@gmail.com">CONTACT ME</a>
             </div>
 
         </div>
@@ -85,7 +90,7 @@
             <a class="footer-link" href="https://www.linkedin.com/jayme-klein">LinkedIn</a>
             <a class="footer-link" href="https://twitter.com/qeapdead">Twitter</a>
             <a class="footer-link" href="https://www.github.com/jaymeklein">Github</a>
-            <p>© Jayme Klein.</p>
+            <p class="copyright">© Jayme Klein.</p>
         </div>
 
 
